Add imgs + left_menu

--- a/code_web/boutique/style.css
+++ b/code_web/boutique/style.css
@@ -73,3 +73,14 @@ li{
 	border-top: 5px solid #e44d26;
 	background-color: rgba(230, 77, 38, 0.15);
 }
+#left_menu{
+	width: 3%;
+	top: 50%;
+	left: 0.7%;
+	position: fixed;
+	float: left;
+}
+#left_menu img{
+	margin-top: 10%;
+	max-width: 80%;
+}
