--- a/code_web/boutique/style.css
+++ b/code_web/boutique/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 body{
 	font-family: 'Oswald', sans-serif;
 	margin: 0px;
@@ -34,15 +33,13 @@ nav > ul > li >a{
 	height: 100%;
 }
 nav li:hover .submenu{
-	display: inline-block;
-	padding-top: 2vh;
-	position: absolute;
-	top: 100%;
-	left: -3.5vw;
+	display: block;
+	background-color: rgba(230, 77, 38, 0.15);
 	z-index: 1000;
 }
 .submenu{
 	display: none;
+	width: 100%;
 }
 .submenu li{
 	border-bottom: 1px solid #CCC;
@@ -78,12 +75,18 @@ li{
 	width: 3%;
 	top: 50%;
 	left: 0.5%;
-	padding-left: 0.5%;
 	position: fixed;
 	float: left;
 	border-style: double;
 }
 #left_menu img{
 	margin-top: 20%;
+	margin-bottom: 20%;
 	max-width: 80%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+#left_menu img:hover{
+	max-width: 95%;
 }
