--- a/code_web/evenements/style.css
+++ b/code_web/evenements/style.css
@@ -90,32 +90,6 @@ a{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*nav*/
-
 body{
 	font-family: 'Oswald', sans-serif;
 	margin: 0px;
@@ -126,7 +100,7 @@ nav{
 	width: 100%;
 	position: fixed;
 	background-color: #424558;
-	font-size: 1.5vw;
+	font-size: 1.3vw;
 }
 nav ul::after{
 	content: "";
@@ -151,22 +125,20 @@ nav > ul > li >a{
 	height: 100%;
 }
 nav li:hover .submenu{
-	display: inline-block;
-	padding-top: 2vh;
-	position: absolute;
-	top: 100%;
-	left: -3.5vw;
+	display: block;
+	background-color: rgba(230, 77, 38, 0.65);
 	z-index: 1000;
 }
 .submenu{
 	display: none;
+	width: 100%;
+	padding-left: 3%;
 }
 .submenu li{
 	border-bottom: 1px solid #CCC;
 }
 .submenu li a{
-	padding: 15px 30px;
-	font-size: 1.2vw;
+	font-size: 1.1vw;
 	color: #222538;
 	width: 6vw;
 }
@@ -174,10 +146,9 @@ li{
 	list-style-type: none;
 }
 .nav_element{
-	list-style: none;
 	text-align: left;
 	line-height: 8vh;
-	height: 9vh;
+	height: 10vh;
 }
 #home_button{
 	width: 10vh;
@@ -188,6 +159,50 @@ li{
 	width: 100%;
 }
 .nav_element:hover{
-	border-top: 5px solid #e44d26;
 	background-color: rgba(230, 77, 38, 0.15);
 }
+#left_menu{
+	width: 3%;
+	top: 50%;
+	left: 0.5%;
+	position: fixed;
+	float: left;
+	border-style: double;
+}
+#left_menu img{
+	margin-top: 20%;
+	margin-bottom: 20%;
+	max-width: 80%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+#left_menu img:hover{
+	max-width: 95%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
