--- a/code_web/boutique/style.css
+++ b/code_web/boutique/style.css
@@ -12,3 +12,17 @@
 	border-radius: 75px;
 	border-color: #424558;
 }
+.boutique_display{
+	width: 100%;
+	margin-left: 3%;
+	margin-right: 3%;
+	display: inline-block;
+}
+.boutique_item{
+	width: 20%;
+	display: inline-block;
+}
+.boutique_item img{
+	max-width: 100%;
+	max-height: 40vh;
+}
