--- a/code_web/boite_a_idees/style.css
+++ b/code_web/boite_a_idees/style.css
@@ -1,4 +1,4 @@
-.main_content{
+.main_content{/*On place juste le contenu principal de manière à ce qu'il ne chevauche pas les menus*/
 	width: 90%;
 	padding-top: 12vh;
 	margin-left: 5%;
@@ -27,20 +27,20 @@
 	margin-top: 0;
 	margin-bottom: 0;
 }
-#voter_idee:hover, #proposer_idee:hover{
+#voter_idee:hover, #proposer_idee:hover{/*On change la couleur des liens quand la souris les survolent*/
 	background-color: rgb(230, 77, 38);
 }
 #content{
 	margin-top: 20vh;
 }
-#cible_result{
+#cible_result{/*On place juste le paragraphe*/
 	position: fixed;
 	top: 50%;
 	text-align: center;
 	font-size: 1.2vw;
 	left: 30%;
 }
-.idea_item{
+.idea_item{/*Cette partie définit nos div qui vont accueillir les idées*/
 	width: 100%;
 	border-style: dotted;
 	margin-bottom: 2%;
@@ -57,7 +57,7 @@
 	height: auto;
 	display: inline-block;
 }
-.idea_item input{
+.idea_item input{/*Ceci est le bouton like sur la droite*/
 	width: 7%;
 	font-size: 100%;
 	margin-left: 7%;
@@ -69,7 +69,7 @@
     transition-duration: 0.4s;
     cursor: pointer;
 }
-.idea_item input:hover{
+.idea_item input:hover{/*Anime le bouton like*/
 	background-color: white;
     color: black;
 }
