--- a/code_web/boutique/style.css
+++ b/code_web/boutique/style.css
@@ -3,7 +3,7 @@
 	padding-top: 12vh;
 	margin-left: 5%;
 }
-.title_boutique h1{
+.title_boutique h1{/*On définit l'allure de notre titre*/
 	font-size: 1.5vw;
 	width: 100%;
 	text-align: center;
@@ -12,20 +12,20 @@
 	border-radius: 75px;
 	border-color: #424558;
 }
-.boutique_display{
+.boutique_display{/*C'est dans le nom...*/
 	width: 100%;
 	margin-left: 3%;
 	margin-right: 3%;
 	display: inline-block;
 }
-.boutique_item{
+.boutique_item{/*Pareil*/
 	width: 20%;
 	display: inline-block;
 }
-.boutique_item img{
+.boutique_item img{/*On précise les dimensions maximales de notre image*/
 	max-width: 100%;
 	max-height: 40vh;
 }
-.boutique_item p{
+.boutique_item p{/*Et la taille de la police*/
 	font-size: 1.1vw;
 }
