--- a/code_web/menu.css
+++ b/code_web/menu.css
@@ -1,9 +1,9 @@
-body{
+body{ /*On précise les règles générales*/
 	font-family: 'Oswald', sans-serif;
 	margin: 0px;
 	padding: 0px;
 }
-nav{
+nav{/*On définit notre bar de navigation*/
 	height: 10vh;
 	width: 100%;
 	position: fixed;
@@ -32,13 +32,13 @@ nav > ul > li >a{
 	color: #FFF;
 	height: 100%;
 }
-nav li:hover .submenu{
+nav li:hover .submenu{/*On définit le menu quand on le survol avec la souris*/
 	display: block;
 	background-color: rgba(230, 77, 38, 0.65);
 	z-index: 1000;
 }
 .submenu{
-	display: none;
+	display: none;/*On ne display pas notre sous-menu sauf si il est survolé*/
 	width: 100%;
 	padding-left: 0%;
 }
@@ -51,18 +51,18 @@ nav li:hover .submenu{
 	width: 6vw;
 	text-align: center;
 }
-.submenu li:hover{
+.submenu li:hover{/*On change la couleur du sous-menu quand la souris le survo*/
 	background-color: rgb(230, 77, 38);
 }
 li{
 	list-style-type: none;
 }
-.nav_element{
+.nav_element{/*On place nos liens dans la bar*/
 	text-align: left;
 	line-height: 8vh;
 	height: 10vh;
 }
-#home_button{
+#home_button{/*On place l'icône du bouton home*/
 	width: 10vh;
 	margin-left: 2.9%;
 	vertical-align: top;
@@ -70,10 +70,10 @@ li{
 #home_button_img{
 	width: 100%;
 }
-.nav_element:hover{
+.nav_element:hover{/*Changement couler en cas de survol*/
 	background-color: rgba(230, 77, 38, 0.15);
 }
-#left_menu{
+#left_menu{/*On place notre menu réseau*/
 	width: 3%;
 	top: 50%;
 	left: 0.5%;
@@ -81,7 +81,7 @@ li{
 	float: left;
 	border-style: double;
 }
-#left_menu img{
+#left_menu img{/*On définit les images et donc les liens dans notre menu*/
 	margin-top: 20%;
 	margin-bottom: 20%;
 	max-width: 80%;
@@ -89,6 +89,6 @@ li{
 	margin-left: auto;
 	margin-right: auto;
 }
-#left_menu img:hover{
+#left_menu img:hover{/*On agrandit légèrement l'image en cas de survol*/
 	max-width: 95%;
 }
