--- a/code_web/Accueil/style.css
+++ b/code_web/Accueil/style.css
@@ -1,6 +1,6 @@
 .link_menu{
     width: 40%;
-    height: 25vh;
+    height: 40%;
     margin-left: 4.5%;
     margin-right: 4.5%;
     margin-top: 5%;
