--- a/code_web/evenements/events/style.css
+++ b/code_web/evenements/events/style.css
@@ -9,41 +9,129 @@ h2{
 	text-align: center;
 	padding-top: 1%;
 }
-/* partie evenement*/ 
+/* partie evenement*/
+.event{
+	width: auto;
+	min-height: 320px;
+	margin-left: 5%;
+	margin-bottom: 5%;
+	margin-right:5%;
+} 
+.titrevent{
+	margin-bottom:;
+}
 .imagevent{
-	
+	float: right;
 }
 
 .datevent{
 	font-size:25px;
-	float: left;
-	margin-left: 25%;
-	margin-top : -20%;
+	float: right;
+	margin-right: 3%;
+	
 }
 
+hr{
+	margin-top:6%;
+}
 .descriptionevent{
 	font-size:20px;
-	float:left;
-	margin-left: 25%;
-	margin-top : -15%;
+	min-width: 20px;
+	margin-top:2%;
+	
 
+	
+	
 }
 
 /* partie commentaires */
-
+.com{
+	width: auto;
+	min-height: 250px;
+	border-style: solid ;
+	border-radius: 1px;
+	margin-left: 5%;
+	margin-bottom: 5%;
+	margin-right:5%;
+}
 .imageusers{
-
+	float:left;
+	margin-top: 2%;
+	margin-left: 2%;
+	margin-bottom: 2%;
+	margin-right: 2%;
 }
 
 .nomusers{
 
-
 }
 
 .textcom{
-
+	margin-left:2%;
+	margin-top: 5%;
+	margin-right:2%;
 }
 
-.likecom{
+/* parametre botton*/
+.button{
+	background-color: #ff0000;
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    float:right;
+    margin-top: 4%;
+    margin-right: 2%;
+    margin-bottom: 1%;
+    border-radius: 4px;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+.button {
+    background-color: #ff0000; 
+    color: white; 
+    border: 2px solid #ff0000;
+}
+.button:hover {
+    background-color: white;
+    color: black;
+  }
+ .comebar{
 
+ }
+.champ{
+	width:300px; 
+	height: 22px;
+	margin-left:5%;
+}
+.form .bouton{
+	background-color: #ff0000;
+    color: white;
+    border: none;
+    padding: 5px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+   
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.bouton {
+	background-color : #ff0000;
+	color:black;
+}
+
+.bouton:hover {
+	background-color:white;
+	color:black;
+}
+a{
+	text-decoration:none;
+	color:black;
 }
