--- a/code_web/menu.css
+++ b/code_web/menu.css
@@ -19,6 +19,7 @@ nav > ul{
 	margin-top: 0px;
 	padding-top: 0px;
 	display: inline-block;
+	padding-left: 2%;
 }
 nav > ul > li{
 	float: left;
@@ -92,4 +93,14 @@ li{
 #left_menu img:hover{/*On agrandit légèrement l'image en cas de survol*/
 	max-width: 95%;
 }
-
+.compte{
+	text-align: left;
+	line-height: 8vh;
+	height: 10vh;
+	color:white;
+	display: inline-block;
+	vertical-align: top;
+}
+.compte p{
+	margin: 0;
+}
