--- a/code_web/boite_a_idees/style.css
+++ b/code_web/boite_a_idees/style.css
@@ -74,3 +74,60 @@
 	background-color: white;
     color: black;
 }
+form{
+	margin-top:  10%
+}
+h2{
+	text-align: center;
+
+}
+
+.nomidee{
+	margin-left: 44%;
+}
+.nomidee p{
+	margin-left: 0.5%;
+}
+.textarea{
+	margin-left: 34%;
+}
+.textarea p{
+	margin-left: 13%
+}
+
+.datevent{
+	margin-left: 45%;
+}
+.datevent p {
+	margin-left: -15%
+}
+
+.button{
+	margin-left : 46% ;
+}
+.button p{
+	margin-left:2%;
+}
+.button input{
+	background-color: #ff0000;
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 4px;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+.button input{
+    background-color: #ff0000; 
+    color: white; 
+    border: 2px solid #ff0000;
+}
+.button:hover input{
+    background-color: white;
+    color: black;
+  }
